@@ -1,3 +1,7 @@
+shmuel 2024-02-16 14:33:22+02:00 - build 807
+
+1. Fix the last commit.
+
 shmuel 2024-02-16 13:01:51+02:00 - build 806
 
 1. LuaFAR: refactoring.
